{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 20,
  "lineage": "2a71cc16-be89-3d04-ac6b-d4201219b494",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1",
            "internal_domain_name_suffix": "cdktlc3mjp2ebczjwrklw2xmfd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "instance1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/publicIPAddresses/instance1-public-ip",
                "subnet_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-24-41-E7",
            "name": "demo-instance1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "network-security-group-demo",
            "virtual_machine_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Compute/virtualMachines/demo-vm"
          },
          "dependencies": [
            "azurerm_public_ip.demo-instance-1",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2",
            "internal_domain_name_suffix": "cdktlc3mjp2ebczjwrklw2xmfd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "instance2",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-24-4E-33",
            "name": "demo-instance2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-security-group-demo",
            "virtual_machine_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Compute/virtualMachines/demo-vm-2"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1|/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh",
            "network_interface_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1",
            "network_security_group_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2|/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing",
            "network_interface_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2",
            "network_security_group_id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh",
            "location": "westeurope",
            "name": "demo-allow-ssh",
            "resource_group_name": "network-security-group-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal-facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing",
            "location": "westeurope",
            "name": "demo-internal-facing",
            "resource_group_name": "network-security-group-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-rule",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/applicationSecurityGroups/internet-facing"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-rule-deny",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_application_security_group.demo-instance-group",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/publicIPAddresses/instance1-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.137.43.47",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "instance1-public-ip",
            "resource_group_name": "network-security-group-demo",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-internal-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1",
            "name": "demo-internal-1",
            "resource_group_name": "network-security-group-demo",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "8b35d510-4bac-40f8-8b29-b454bb72ec2b",
            "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network",
            "location": "westeurope",
            "name": "demo-network",
            "resource_group_name": "network-security-group-demo",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/898cdc61-43b3-407e-bcbd-ee617b6a2615/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1",
                "name": "demo-internal-1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    }
  ]
}